# 128-propensity-score-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  data_loader.py  model.py  requirements.txt
rust/: Cargo.toml
rust/examples/: backtest.rs  basic_usage.rs  crypto_data.rs
rust/src/: backtest.rs  data_loader.rs  lib.rs  model.rs  utils.rs
