[package]
name = "propensity_score_trading"
version = "0.1.0"
edition = "2021"
authors = ["Chapter 107 Contributors"]
description = "Propensity Score Methods for Trading in Rust"
license = "MIT"
readme = "README.md"

[lib]
name = "propensity_score_trading"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"

[[example]]
name = "crypto_data"
path = "examples/crypto_data.rs"

[dependencies]
# Core numeric computation
ndarray = "0.15"
ndarray-stats = "0.5"

# Statistics
statrs = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for data loading
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }

# Async runtime
tokio = { version = "1.0", features = ["full"], optional = true }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# CSV parsing
csv = "1.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
approx = "0.5"

[features]
default = []
network = ["reqwest", "tokio"]
